test/cli/test-generating-policy/template/generate-cm-plain/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test
policies:
- policy.yaml
resources:
- resource.yaml
results:
- generatedResource: generated-resource.yaml
  isGeneratingPolicy: true
  kind: Namespace
  policy: generate-cm-template-plain
  resources:
  - test-ns
  result: pass
